Captify Content Updates version to 1.4.7 Fixes issue with overflowing image overlay Fixes issue of missing effect with bottom sliding overlay
git-svn-id: https://subversion.assembla.com/svn/extensions/mod_captifyContent/trunk@237 eebcefd6-5299-4899-9bc2-b36b733a3bcb

--- a/css/captifyContent.css
+++ b/css/captifyContent.css
@@ -1,3 +1,6 @@
+.viewport{
+position:relative;
+}
 .viewport,.ccItem {
 float:left;
 overflow:hidden;
@@ -18,6 +21,12 @@ text-align:center;
 text-decoration:none;
 width:100%;
 z-index:100;
+}
+
+.viewport a span.bottom {
+	bottom:0;
+	left:0;
+	height:65%;
 }
 
 .viewport a span em {
